#843 Add `add-opens` for `java.nio` for JDK 16 tests