@@ -399,6 +399,7 @@
 										--add-opens java.base/java.lang=ALL-UNNAMED
 										--add-opens java.base/java.lang.invoke=ALL-UNNAMED
 										--add-opens=java.base/java.net=ALL-UNNAMED
+										--add-opens=java.base/java.nio=ALL-UNNAMED
 										--add-opens=java.base/java.time=ALL-UNNAMED
 										--add-opens=java.base/java.util=ALL-UNNAMED
 										--add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
